--- a/GetYahooData.ipynb
+++ b/GetYahooData.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2561e971",
+   "id": "96d3fc99",
    "metadata": {},
    "outputs": [
     {
@@ -155,56 +155,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "5a38aece",
+   "execution_count": 10,
+   "id": "4c4e1118",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "           date        open        high         low       close    adjclose  \\\n",
-      "0    2015-07-10   30.485001   30.962500   30.302500   30.820000   28.014681   \n",
-      "1    2015-07-13   31.257500   31.440001   31.080000   31.415001   28.555527   \n",
-      "2    2015-07-14   31.510000   31.592501   31.260000   31.402500   28.544163   \n",
-      "3    2015-07-15   31.430000   31.787500   31.395000   31.705000   28.819128   \n",
-      "4    2015-07-16   31.934999   32.142502   31.837500   32.127499   29.203165   \n",
-      "...         ...         ...         ...         ...         ...         ...   \n",
-      "1757 2022-07-01  136.039993  139.039993  135.660004  138.929993  138.737274   \n",
-      "1758 2022-07-05  137.770004  141.610001  136.929993  141.559998  141.363632   \n",
-      "1759 2022-07-06  141.350006  144.119995  141.080002  142.919998  142.721756   \n",
-      "1760 2022-07-07  143.289993  146.550003  143.279999  146.350006  146.147003   \n",
-      "1761 2022-07-08  145.259995  147.550003  145.000000  147.039993  146.836029   \n",
-      "\n",
-      "         volume ticker  \n",
-      "0     245418000   AAPL  \n",
-      "1     165762000   AAPL  \n",
-      "2     127072400   AAPL  \n",
-      "3     134596800   AAPL  \n",
-      "4     144889600   AAPL  \n",
-      "...         ...    ...  \n",
-      "1757   71051600   AAPL  \n",
-      "1758   73353800   AAPL  \n",
-      "1759   74064300   AAPL  \n",
-      "1760   66253700   AAPL  \n",
-      "1761   64547800   AAPL  \n",
-      "\n",
-      "[1762 rows x 8 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from yahoo_fin.stock_info import get_data\n",
     "\n",
     "apple_weekly= get_data(\"AAPL\", start_date=\"07/10/2015\", end_date=\"07/10/2022\", index_as_date = False, interval=\"1d\")\n",
-    "\n",
-    "print(apple_weekly)"
+    "google_weekly= get_data(\"GOOG\", start_date=\"07/10/2015\", end_date=\"07/10/2022\", index_as_date = False, interval=\"1d\")\n",
+    "# print(apple_weekly)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "11f4cd30",
+   "execution_count": 14,
+   "id": "ae803fea",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +179,7 @@
        "{'paths': ['s3://source-voltar/source/file1.csv'], 'partitions_values': {}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,13 +188,39 @@
     "import awswrangler as wr\n",
     "\n",
     "path = f\"s3://source-voltar/source/file1.csv\"\n",
-    "wr.s3.to_csv(apple_weekly, path, index=False)"
+    "\n",
+    "wr.s3.to_csv(apple_weekly, path, index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fcfd517e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'paths': ['s3://source-voltar/source/file1_goog.csv'],\n",
+       " 'partitions_values': {}}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "path_goog = f\"s3://source-voltar/source/file1_goog.csv\"\n",
+    "\n",
+    "wr.s3.to_csv(google_weekly, path_goog, index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "442099a3",
+   "id": "2d237cb4",
    "metadata": {},
    "outputs": [],
    "source": []
