--- a/GetYahooData.ipynb
+++ b/GetYahooData.ipynb
@@ -223,7 +223,9 @@
    "id": "2d237cb4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print (\"hi\")"
+   ]
   }
  ],
  "metadata": {
