--- a/Fed-Recession-Data.ipynb
+++ b/Fed-Recession-Data.ipynb
@@ -2,104 +2,72 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting awswrangler\n",
-      "  Downloading awswrangler-2.17.0-py3-none-any.whl (251 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m251.6/251.6 kB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hCollecting jsonpath-ng<2.0.0,>=1.5.3\n",
-      "  Downloading jsonpath_ng-1.5.3-py3-none-any.whl (29 kB)\n",
-      "Collecting requests-aws4auth<2.0.0,>=1.1.1\n",
-      "  Downloading requests_aws4auth-1.1.2-py2.py3-none-any.whl (24 kB)\n",
-      "Collecting redshift-connector<2.1.0,>=2.0.889\n",
-      "  Downloading redshift_connector-2.0.909-py3-none-any.whl (112 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m112.1/112.1 kB\u001b[0m \u001b[31m13.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: pandas<2.0.0,>=1.2.0 in /opt/homebrew/lib/python3.10/site-packages (from awswrangler) (1.4.3)\n",
-      "Collecting gremlinpython<4.0.0,>=3.5.2\n",
-      "  Downloading gremlinpython-3.6.1-py2.py3-none-any.whl (73 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m73.3/73.3 kB\u001b[0m \u001b[31m2.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: boto3<2.0.0,>=1.24.11 in /opt/homebrew/lib/python3.10/site-packages (from awswrangler) (1.24.79)\n",
-      "Collecting pg8000<2.0.0,>=1.20.0\n",
-      "  Downloading pg8000-1.29.1-py3-none-any.whl (34 kB)\n",
-      "Collecting pyarrow<8.1.0,>=2.0.0\n",
-      "  Downloading pyarrow-8.0.0-cp310-cp310-macosx_11_0_arm64.whl (16.2 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.2/16.2 MB\u001b[0m \u001b[31m21.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hCollecting opensearch-py<3,>=1\n",
-      "  Downloading opensearch_py-2.0.0-py2.py3-none-any.whl (204 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m204.6/204.6 kB\u001b[0m \u001b[31m8.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: botocore<2.0.0,>=1.27.11 in /opt/homebrew/lib/python3.10/site-packages (from awswrangler) (1.27.79)\n",
+      "Requirement already satisfied: awswrangler in /opt/homebrew/lib/python3.10/site-packages (2.17.0)\n",
+      "Requirement already satisfied: backoff<3.0.0,>=1.11.1 in /opt/homebrew/lib/python3.10/site-packages (from awswrangler) (2.1.2)\n",
+      "Requirement already satisfied: boto3<2.0.0,>=1.24.11 in /opt/homebrew/lib/python3.10/site-packages (from awswrangler) (1.24.79)\n",
+      "Requirement already satisfied: jsonpath-ng<2.0.0,>=1.5.3 in /opt/homebrew/lib/python3.10/site-packages (from awswrangler) (1.5.3)\n",
+      "Requirement already satisfied: pymysql<2.0.0,>=1.0.0 in /opt/homebrew/lib/python3.10/site-packages (from awswrangler) (1.0.2)\n",
+      "Requirement already satisfied: pandas<2.0.0,>=1.2.0 in /opt/homebrew/lib/python3.10/site-packages (from awswrangler) (1.4.3)\n",
+      "Requirement already satisfied: openpyxl<3.1.0,>=3.0.0 in /opt/homebrew/lib/python3.10/site-packages (from awswrangler) (3.0.10)\n",
       "Requirement already satisfied: numpy<2.0.0,>=1.21.0 in /opt/homebrew/lib/python3.10/site-packages (from awswrangler) (1.22.4)\n",
-      "Collecting openpyxl<3.1.0,>=3.0.0\n",
-      "  Downloading openpyxl-3.0.10-py2.py3-none-any.whl (242 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m242.1/242.1 kB\u001b[0m \u001b[31m7.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting backoff<3.0.0,>=1.11.1\n",
-      "  Downloading backoff-2.1.2-py3-none-any.whl (14 kB)\n",
-      "Collecting pymysql<2.0.0,>=1.0.0\n",
-      "  Downloading PyMySQL-1.0.2-py3-none-any.whl (43 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m43.8/43.8 kB\u001b[0m \u001b[31m1.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting progressbar2<5.0.0,>=4.0.0\n",
-      "  Downloading progressbar2-4.0.0-py2.py3-none-any.whl (26 kB)\n",
+      "Requirement already satisfied: pg8000<2.0.0,>=1.20.0 in /opt/homebrew/lib/python3.10/site-packages (from awswrangler) (1.29.1)\n",
+      "Requirement already satisfied: progressbar2<5.0.0,>=4.0.0 in /opt/homebrew/lib/python3.10/site-packages (from awswrangler) (4.0.0)\n",
+      "Requirement already satisfied: redshift-connector<2.1.0,>=2.0.889 in /opt/homebrew/lib/python3.10/site-packages (from awswrangler) (2.0.909)\n",
+      "Requirement already satisfied: opensearch-py<3,>=1 in /opt/homebrew/lib/python3.10/site-packages (from awswrangler) (2.0.0)\n",
+      "Requirement already satisfied: botocore<2.0.0,>=1.27.11 in /opt/homebrew/lib/python3.10/site-packages (from awswrangler) (1.27.79)\n",
+      "Requirement already satisfied: gremlinpython<4.0.0,>=3.5.2 in /opt/homebrew/lib/python3.10/site-packages (from awswrangler) (3.6.1)\n",
+      "Requirement already satisfied: requests-aws4auth<2.0.0,>=1.1.1 in /opt/homebrew/lib/python3.10/site-packages (from awswrangler) (1.1.2)\n",
+      "Requirement already satisfied: pyarrow<8.1.0,>=2.0.0 in /opt/homebrew/lib/python3.10/site-packages (from awswrangler) (8.0.0)\n",
       "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in /opt/homebrew/lib/python3.10/site-packages (from boto3<2.0.0,>=1.24.11->awswrangler) (1.0.1)\n",
       "Requirement already satisfied: s3transfer<0.7.0,>=0.6.0 in /opt/homebrew/lib/python3.10/site-packages (from boto3<2.0.0,>=1.24.11->awswrangler) (0.6.0)\n",
       "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /opt/homebrew/lib/python3.10/site-packages (from botocore<2.0.0,>=1.27.11->awswrangler) (2.8.2)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.25.4 in /opt/homebrew/lib/python3.10/site-packages (from botocore<2.0.0,>=1.27.11->awswrangler) (1.26.12)\n",
+      "Requirement already satisfied: aenum<4.0.0,>=1.4.5 in /opt/homebrew/lib/python3.10/site-packages (from gremlinpython<4.0.0,>=3.5.2->awswrangler) (3.1.11)\n",
       "Requirement already satisfied: nest-asyncio in /opt/homebrew/lib/python3.10/site-packages (from gremlinpython<4.0.0,>=3.5.2->awswrangler) (1.5.5)\n",
+      "Requirement already satisfied: isodate<1.0.0,>=0.6.0 in /opt/homebrew/lib/python3.10/site-packages (from gremlinpython<4.0.0,>=3.5.2->awswrangler) (0.6.1)\n",
       "Requirement already satisfied: aiohttp<=3.8.1,>=3.8.0 in /opt/homebrew/lib/python3.10/site-packages (from gremlinpython<4.0.0,>=3.5.2->awswrangler) (3.8.1)\n",
-      "Collecting isodate<1.0.0,>=0.6.0\n",
-      "  Downloading isodate-0.6.1-py2.py3-none-any.whl (41 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m41.7/41.7 kB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting aenum<4.0.0,>=1.4.5\n",
-      "  Downloading aenum-3.1.11-py3-none-any.whl (131 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m131.5/131.5 kB\u001b[0m \u001b[31m5.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: decorator in /opt/homebrew/lib/python3.10/site-packages (from jsonpath-ng<2.0.0,>=1.5.3->awswrangler) (5.1.1)\n",
+      "Requirement already satisfied: ply in /opt/homebrew/lib/python3.10/site-packages (from jsonpath-ng<2.0.0,>=1.5.3->awswrangler) (3.11)\n",
+      "Requirement already satisfied: decorator in /opt/homebrew/lib/python3.10/site-packages (from jsonpath-ng<2.0.0,>=1.5.3->awswrangler) (5.1.1)\n",
       "Requirement already satisfied: six in /opt/homebrew/lib/python3.10/site-packages (from jsonpath-ng<2.0.0,>=1.5.3->awswrangler) (1.16.0)\n",
-      "Collecting ply\n",
-      "  Downloading ply-3.11-py2.py3-none-any.whl (49 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.6/49.6 kB\u001b[0m \u001b[31m2.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting et-xmlfile\n",
-      "  Downloading et_xmlfile-1.1.0-py3-none-any.whl (4.7 kB)\n",
-      "Requirement already satisfied: requests<3.0.0,>=2.4.0 in /opt/homebrew/lib/python3.10/site-packages (from opensearch-py<3,>=1->awswrangler) (2.28.1)\n",
+      "Requirement already satisfied: et-xmlfile in /opt/homebrew/lib/python3.10/site-packages (from openpyxl<3.1.0,>=3.0.0->awswrangler) (1.1.0)\n",
       "Requirement already satisfied: certifi in /opt/homebrew/lib/python3.10/site-packages (from opensearch-py<3,>=1->awswrangler) (2022.6.15)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.4.0 in /opt/homebrew/lib/python3.10/site-packages (from opensearch-py<3,>=1->awswrangler) (2.28.1)\n",
       "Requirement already satisfied: pytz>=2020.1 in /opt/homebrew/lib/python3.10/site-packages (from pandas<2.0.0,>=1.2.0->awswrangler) (2022.2.1)\n",
-      "Collecting scramp>=1.4.1\n",
-      "  Downloading scramp-1.4.1-py3-none-any.whl (8.5 kB)\n",
-      "Collecting python-utils>=3.0.0\n",
-      "  Downloading python_utils-3.3.3-py2.py3-none-any.whl (23 kB)\n",
-      "Requirement already satisfied: lxml>=4.6.5 in /opt/homebrew/lib/python3.10/site-packages (from redshift-connector<2.1.0,>=2.0.889->awswrangler) (4.9.1)\n",
-      "Requirement already satisfied: beautifulsoup4<5.0.0,>=4.7.0 in /opt/homebrew/lib/python3.10/site-packages (from redshift-connector<2.1.0,>=2.0.889->awswrangler) (4.11.1)\n",
+      "Requirement already satisfied: scramp>=1.4.1 in /opt/homebrew/lib/python3.10/site-packages (from pg8000<2.0.0,>=1.20.0->awswrangler) (1.4.1)\n",
+      "Requirement already satisfied: python-utils>=3.0.0 in /opt/homebrew/lib/python3.10/site-packages (from progressbar2<5.0.0,>=4.0.0->awswrangler) (3.3.3)\n",
       "Requirement already satisfied: setuptools in /opt/homebrew/lib/python3.10/site-packages (from redshift-connector<2.1.0,>=2.0.889->awswrangler) (63.4.3)\n",
+      "Requirement already satisfied: beautifulsoup4<5.0.0,>=4.7.0 in /opt/homebrew/lib/python3.10/site-packages (from redshift-connector<2.1.0,>=2.0.889->awswrangler) (4.11.1)\n",
       "Requirement already satisfied: packaging in /opt/homebrew/lib/python3.10/site-packages (from redshift-connector<2.1.0,>=2.0.889->awswrangler) (21.3)\n",
-      "Requirement already satisfied: multidict<7.0,>=4.5 in /opt/homebrew/lib/python3.10/site-packages (from aiohttp<=3.8.1,>=3.8.0->gremlinpython<4.0.0,>=3.5.2->awswrangler) (6.0.2)\n",
-      "Requirement already satisfied: attrs>=17.3.0 in /opt/homebrew/lib/python3.10/site-packages (from aiohttp<=3.8.1,>=3.8.0->gremlinpython<4.0.0,>=3.5.2->awswrangler) (22.1.0)\n",
-      "Requirement already satisfied: aiosignal>=1.1.2 in /opt/homebrew/lib/python3.10/site-packages (from aiohttp<=3.8.1,>=3.8.0->gremlinpython<4.0.0,>=3.5.2->awswrangler) (1.2.0)\n",
-      "Requirement already satisfied: yarl<2.0,>=1.0 in /opt/homebrew/lib/python3.10/site-packages (from aiohttp<=3.8.1,>=3.8.0->gremlinpython<4.0.0,>=3.5.2->awswrangler) (1.8.1)\n",
-      "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in /opt/homebrew/lib/python3.10/site-packages (from aiohttp<=3.8.1,>=3.8.0->gremlinpython<4.0.0,>=3.5.2->awswrangler) (4.0.2)\n",
+      "Requirement already satisfied: lxml>=4.6.5 in /opt/homebrew/lib/python3.10/site-packages (from redshift-connector<2.1.0,>=2.0.889->awswrangler) (4.9.1)\n",
       "Requirement already satisfied: charset-normalizer<3.0,>=2.0 in /opt/homebrew/lib/python3.10/site-packages (from aiohttp<=3.8.1,>=3.8.0->gremlinpython<4.0.0,>=3.5.2->awswrangler) (2.1.1)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in /opt/homebrew/lib/python3.10/site-packages (from aiohttp<=3.8.1,>=3.8.0->gremlinpython<4.0.0,>=3.5.2->awswrangler) (6.0.2)\n",
       "Requirement already satisfied: frozenlist>=1.1.1 in /opt/homebrew/lib/python3.10/site-packages (from aiohttp<=3.8.1,>=3.8.0->gremlinpython<4.0.0,>=3.5.2->awswrangler) (1.3.1)\n",
+      "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in /opt/homebrew/lib/python3.10/site-packages (from aiohttp<=3.8.1,>=3.8.0->gremlinpython<4.0.0,>=3.5.2->awswrangler) (4.0.2)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in /opt/homebrew/lib/python3.10/site-packages (from aiohttp<=3.8.1,>=3.8.0->gremlinpython<4.0.0,>=3.5.2->awswrangler) (1.2.0)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in /opt/homebrew/lib/python3.10/site-packages (from aiohttp<=3.8.1,>=3.8.0->gremlinpython<4.0.0,>=3.5.2->awswrangler) (22.1.0)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.0 in /opt/homebrew/lib/python3.10/site-packages (from aiohttp<=3.8.1,>=3.8.0->gremlinpython<4.0.0,>=3.5.2->awswrangler) (1.8.1)\n",
       "Requirement already satisfied: soupsieve>1.2 in /opt/homebrew/lib/python3.10/site-packages (from beautifulsoup4<5.0.0,>=4.7.0->redshift-connector<2.1.0,>=2.0.889->awswrangler) (2.3.2.post1)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /opt/homebrew/lib/python3.10/site-packages (from requests<3.0.0,>=2.4.0->opensearch-py<3,>=1->awswrangler) (3.3)\n",
-      "Collecting asn1crypto>=1.4.0\n",
-      "  Downloading asn1crypto-1.5.1-py2.py3-none-any.whl (105 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m105.0/105.0 kB\u001b[0m \u001b[31m4.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /opt/homebrew/lib/python3.10/site-packages (from packaging->redshift-connector<2.1.0,>=2.0.889->awswrangler) (3.0.9)\n",
-      "Installing collected packages: ply, asn1crypto, aenum, scramp, python-utils, pymysql, pyarrow, jsonpath-ng, isodate, et-xmlfile, backoff, requests-aws4auth, progressbar2, pg8000, opensearch-py, openpyxl, gremlinpython, redshift-connector, awswrangler\n",
-      "Successfully installed aenum-3.1.11 asn1crypto-1.5.1 awswrangler-2.17.0 backoff-2.1.2 et-xmlfile-1.1.0 gremlinpython-3.6.1 isodate-0.6.1 jsonpath-ng-1.5.3 openpyxl-3.0.10 opensearch-py-2.0.0 pg8000-1.29.1 ply-3.11 progressbar2-4.0.0 pyarrow-8.0.0 pymysql-1.0.2 python-utils-3.3.3 redshift-connector-2.0.909 requests-aws4auth-1.1.2 scramp-1.4.1\n",
+      "Requirement already satisfied: asn1crypto>=1.4.0 in /opt/homebrew/lib/python3.10/site-packages (from scramp>=1.4.1->pg8000<2.0.0,>=1.20.0->awswrangler) (1.5.1)\n",
+      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /opt/homebrew/lib/python3.10/site-packages (from packaging->redshift-connector<2.1.0,>=2.0.889->awswrangler) (3.0.9)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "!pip install awswrangler"
+    "pip install awswrangler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +540,7 @@
        "35  2019-08-01    0.54"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +561,7 @@
        "{'paths': ['s3://source-voltar/source/fed.csv'], 'partitions_values': {}}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
