--- a/GetYahooData.ipynb
+++ b/GetYahooData.ipynb
@@ -184,17 +184,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "4c4e1118",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-09-28\n"
+     ]
+    }
+   ],
    "source": [
     "from yahoo_fin.stock_info import get_data\n",
-    "import datetime\n",
+    "import datetime as dt\n",
     "\n",
-    "current_date= datetime.datetime.now()\n",
+    "current_date= datetime.date.today()\n",
     "# print(current_date)\n",
     "apple_weekly= get_data(\"AAPL\", start_date=\"07/10/2015\", end_date=\"09/28/2022\", index_as_date = False, interval=\"1d\")\n",
     "# google_weekly= get_data(\"GOOG\", start_date=\"07/10/2015\", end_date=\"07/10/2022\", index_as_date = False, interval=\"1d\")\n",
